# hockeybuggy.com

./: .eslintrc.js  .gitignore  .netlify.toml  .prettierignore  .prettierrc.toml  .travis.yml  404.html  AGENTS.md  CLAUDE.md  CNAME  Gemfile  Guardfile  LICENSE.html  LICENSE.md  README.md  Rakefile  _config.yml  _dev_config.yml  about.md  config.toml  contact.md  declarations.d.ts  dev_server.js  eslint.config.mjs  feed.xml  gatsby-browser.js  gatsby-config.js  gatsby-node.js  graphql-types.ts  humans.txt  index.html  index.md  keybase.txt  lychee.toml  netlify.toml  new_post.py  next.config.js  package.json  playwright.config.ts  robots.txt  (+2 more)
.github/: dependabot.yml
.mergify/: config.yml
_deploy/: post-receive
_drafts/: 2014-09-02-misc_7VBiYkyD.md  2014-10-06-misc_fDVSkgm0.md  2015-02-13-misc_Y7qZWcJQ.md  2015-09-03-misc_ErD6BPgl.md  2016-01-18-wind-river-trip_journal.md
_includes/: footer.html  head.html  header.html
_layouts/: default.html  page.html  post.html
_posts/: 2012-12-02-wpotd_itsyudGoiv.md  2012-12-03-wpotd_dockdunt.md  2012-12-04-wpotd_rumDajUj.md  2012-12-05-wpotd_wuvemFac0.md  2012-12-06-wpotd_AygserUdd.md  2012-12-07-wpotd_drozdond.md  (+22 more)
blog/: index.html
ssg/: Cargo.toml
ssg/assets/: nav.js
ssg/src/: config.rs  feed.rs  main.rs  sitemap.rs  url.rs
ssg/src/content/: markdown.rs  mod.rs  posts.rs  projects.rs
ssg/src/render/: mod.rs  pages.rs
ssg/templates/: 404.html  base.html  index.html
ssg/templates/blog/: categories.html  category.html  index.html  post.html  tag.html  tags.html
ssg/templates/projects/: index.html  show.html
(+205 files in other folders)
