[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
grass = { version = "0.13", default-features = false }
minijinja = { version = "2", features = ["loader"] }
pulldown-cmark = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
